--- a/packaging/manifest.ini
+++ b/packaging/manifest.ini
@@ -1,20 +1,26 @@
 [global]
-svn_repo = svn+ssh://svnread@kelev.kaltura.com/usr/local/
-svn_user = svnread
-svn_pass = onlyread
+svn_repo = https://github.com/kaltura/
+svn_user = 
+svn_pass = 
 
 [server_core]
-svn_path = kalsource/backend/server/trunk/core
+local_git_path = ../git-repositories/KalturaServer/
 local_path = package/app/app/
 get[] = *
 
 [server_onprem]
-svn_path = kalsource/backend/server/trunk/on-premise/
+local_git_path = ../git-repositories/ce-configurations/
+local_path = package/app/app/
+get[] = *
+
+[server_ce]
+local_git_path = ../git-repositories/ce-branding/
 local_path = package/app/app/
 get[] = *
 
 [flash]
-svn_path = kalprod/flash/
+local_git_path = ../git-repositories/ce-binaries/
+svn_path = ce-binaries/trunk/
 local_path = package/app/web/flash/
 
 ;KMC
@@ -63,8 +69,9 @@ get[] = kcw/v2.1.6.7
 get[] = kae/v1.0.10.23657
 get[] = mixplugins
 get[] = kupload/v1.1.7
-get[] = kdp/v1.0.3
-get[] = kdp/v1.2.3
+; FIXME: do we really need kdp versions before kdp3?
+; get[] = kdp/v1.0.3
+; get[] = kdp/v1.2.3
 get[] = kcw/v1.5.4
 get[] = kcw/v2.1.6.7
 get[] = kdp3/v3.1.6
@@ -93,14 +100,14 @@ get[] = kcw/v2.0.7
 get[] = kcw/v2.1.6.3
 get[] = kcw/v1.6.5
 get[] = kcw/v1.6.5.24461
-get[] = kdp/dev/2tor_sync/carousel
-get[] = kdp/v2.0.12
-get[] = kdp/v2.7.0
+; get[] = kdp/dev/2tor_sync/carousel
+; get[] = kdp/v2.0.12
+; get[] = kdp/v2.7.0
 get[] = kdp3/v3.4.10.1
 get[] = kdp3/v3.4.5
 get[] = kdp3/v3.3.9.2
 get[] = kdp3wrapper/v32.0
-get[] = kdpwrapper/v11.0
+; get[] = kdpwrapper/v11.0
 get[] = kpaint/v1.0.4
 get[] = kpaint/v1.0.1
 get[] = kse/v2.3
@@ -115,28 +122,26 @@ get[] = kupload/v1.0.23
 
 
 [apps]
-svn_path = kalprod/apps/
+local_git_path = ../git-repositories/ce-binaries/
 local_path = package/app/apps/
 get[] = clipapp/v1.0.5
 
 [uiconf]
-svn_path = kalsource/uiconf/
+local_git_path = ../git-repositories/ce-uiconfs/
 local_path = package/app/web/content/uiconf/
 get[] = moodle
 get[] = kaltura
 get[] = kcweditor
 
 ;MediaSpace4
-get[] = ps/kaltura/kvpm/v1.0.5
+; get[] = ps/kaltura/kvpm/v1.0.5
 
 [dwh]
-svn_path = kalprod/dwh/core/trunk
-;svn_path = kalprod/dwh/core/branches
+local_git_path = ../git-repositories/ce-dwh/
 local_path = package/app/dwh/
 get[] = *
 
 [dwh_upgrade]
-svn_path = /kalprod/dwh/site-specific/Falcon/CE/ddl/migrations
 local_path = package/app/dwh/ddl/migrations
 get[] = *
 
@@ -146,6 +151,5 @@ local_path = package/app/html5/html5lib/
 get[] = v1.6.12.27g
 
 [installer]
-svn_path = kalsource/on-premise/trunk/installer/
 local_path = .
 get[] = *
