update from svn r88849

--- a/packaging/manifest.ini
+++ b/packaging/manifest.ini
@@ -4,7 +4,7 @@ svn_user = svnread
 svn_pass = onlyread
 
 [server_core]
-svn_path = kalsource/backend/server/trunk/core
+svn_path = kalsource/backend/server/tags/falcon_2012_08_20
 local_path = package/app/app/
 get[] = *
 
@@ -24,15 +24,19 @@ get[] = kdp3wrapper/v34.0
 get[] = flexwrapper/v1.2
 get[] = flexwrapper/v1.01
 get[] = kcw/v2.1.6.7
+get[] = kcw/v2.1.6.7.7.a
 get[] = kclip/v1.1.2.1
 ;for now we need also v1.1.2 due to a bug in kmc
 get[] = kclip/v1.1.2
 get[] = kmc/login/v1.2.2
+get[] = ksr/v1.0.32
 
 ;MediaSpace4
 get[] = kdp3/v3.6.5
+get[] = kdp3/v3.6.9
 get[] = kdp3/v3.5.9
 get[] = krecord/v1.5.12
+get[] = krecord/v1.0.31
 get[] = kupload/v1.2.8
 
 ;Sakai (Eagle)
@@ -118,6 +122,7 @@ get[] = kupload/v1.0.23
 svn_path = kalprod/apps/
 local_path = package/app/apps/
 get[] = clipapp/v1.0.5
+get[] = clipapp/v1.0.5_saas
 
 [uiconf]
 svn_path = kalsource/uiconf/
@@ -130,8 +135,7 @@ get[] = kcweditor
 get[] = ps/kaltura/kvpm/v1.0.5
 
 [dwh]
-svn_path = kalprod/dwh/core/trunk
-;svn_path = kalprod/dwh/core/branches
+svn_path = kalprod/dwh/core/branches/Falcon_2012_09_06
 local_path = package/app/dwh/
 get[] = *
 
@@ -144,8 +148,9 @@ get[] = *
 git_path = https://github.com/kaltura/mwEmbed/tarball  
 local_path = package/app/html5/html5lib/
 get[] = v1.6.12.27g
+get[] = v1.6.12.27i
 
 [installer]
-svn_path = kalsource/on-premise/trunk/installer/
+svn_path = kalsource/on-premise/tags/CE-6.0.1/installer/
 local_path = .
 get[] = *
