update from svn r89600

--- a/packaging/manifest.ini
+++ b/packaging/manifest.ini
@@ -30,6 +30,8 @@ get[] = kclip/v1.1.2.1
 get[] = kclip/v1.1.2
 get[] = kmc/login/v1.2.2
 get[] = ksr/v1.0.32
+get[] = kcw/v2.1.6.7
+get[] = kcw/v2.2
 
 ;MediaSpace4
 get[] = kdp3/v3.6.5
@@ -149,6 +151,7 @@ git_path = https://github.com/kaltura/mwEmbed/tarball
 local_path = package/app/html5/html5lib/
 get[] = v1.6.12.27g
 get[] = v1.6.12.27i
+get[] = v1.7.0
 
 [installer]
 svn_path = kalsource/on-premise/tags/CE-6.0.1/installer/
