update from svn r90000

--- a/installer/configurator/configuration.ini
+++ b/installer/configurator/configuration.ini
@@ -5,5 +5,6 @@ token_files[] = @BASE_DIR@/app/configurations/local.ini
 token_files[] = @BASE_DIR@/app/configurations/dc_config.ini
 token_files[] = @BASE_DIR@/app/configurations/system.ini
 token_files[] = @BASE_DIR@/app/configurations/var.ini
+token_files[] = @BASE_DIR@/app/configurations/db.ini
 token_files[] = @BASE_DIR@/app/configurations/apache/my_kaltura.conf
 
