--- a/installer/directoryConstructor/build.xml
+++ b/installer/directoryConstructor/build.xml
@@ -1,44 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Directory Constructor" default="Construct">
-	<taskdef name="foreachxmlelementtask" classpath="../lib" classname="phing.ForEachXmlElementTask" />
+<project name="Directory Constructor" default="Pack" phingVersion="2.4.13">
+	<taskdef name="foreachxmlelement" classpath="../lib" classname="phing.ForEachXmlElementTask" />
+	<taskdef name="dos2unix" classpath="../lib" classname="phing.Dos2UnixTask" />
+	<taskdef name="createuser" classpath="../lib" classname="phing.user.CreateUserTask" />
 	
 	<target name="Init">
 		<property name="actions.makeDir" value="false" />
 		<property name="actions.fetchCode" value="false" />
+		<property name="actions.createUser" value="false" />
+		<property name="actions.setOwner" value="false" />
 		<property name="actions.setPermissions" value="false" />
+		<property name="actions.dos2Unix" value="false" />
 	</target>
 	
-	<target name="Construct">
+	<target name="Pack" depends="Init">
 		<property name="actions.makeDir" value="true" override="true" />
 		<property name="actions.fetchCode" value="true" override="true" />
+		<property name="actions.setPermissions" value="true" override="true" />
+		<property name="actions.dos2Unix" value="true" override="true" />
+		
+		<phingcall target="Construct tree" />
+	</target>
+	
+	<target name="Construct" depends="Init">
+		<property name="actions.makeDir" value="true" override="true" />
+		<property name="actions.fetchCode" value="true" override="true" />
+		<property name="actions.createUser" value="true" override="true" />
+		<property name="actions.setOwner" value="true" override="true" />
 		<property name="actions.setPermissions" value="true" override="true" />
 		
 		<phingcall target="Construct tree" />
 	</target>
 	
-	<target name="Update permissions" depends="Init">
+	<target name="Update-Permissions" depends="Init">
+		<property name="actions.createUser" value="true" override="true" />
+		<property name="actions.setOwner" value="true" override="true" />
 		<property name="actions.setPermissions" value="true" override="true" />
 		<phingcall target="Construct tree" />
 	</target>
 	
-	<target name="Update code" depends="Init">
-		<property name="actions.fetchCode" value="true" override="true" />
-		
+	<target name="Dos2Unix" depends="Init">
+		<property name="actions.dos2Unix" value="true" override="true" />
 		<phingcall target="Construct tree" />
 	</target>
 	
-	<target name="Make directories" depends="Init">
-		<property name="actions.makeDir" value="true" override="true" />
-		<phingcall target="Construct tree" />
-	</target>
-	
-	<target name="Load configuration">
+	<target name="Load configuration" depends="Init">
 		<property file="build.properties" override="false" />
 	</target>
 	
 	<target name="Construct tree" depends="Load configuration">
 		<echo message="Construct Kaltura directories tree [${BASE_DIR}]" />
-		<foreachxmlelementtask file="${xml.uri}" skipRoot="false" xPathSkipRoot="false" elementPrefix="directory" xPathParam="directory.path" target="Construct directory" />
+		<foreachxmlelement file="${xml.uri}" skipRoot="false" xPathSkipRoot="false" elementPrefix="directory" xPathParam="directory.path" target="Construct directory" />
+		
+		<if>
+			<istrue value="${actions.dos2Unix}" />
+			<then>
+				<dos2unix>
+					<fileset dir="${BASE_DIR}" defaultexcludes="false">
+						<type type="file" />
+						<include name="**/*.php" />
+						<include name="**/*template*" />
+					</fileset>
+				</dos2unix>
+			</then>
+		</if>
 	</target>
     
 	<target name="Construct directory">
@@ -47,12 +72,11 @@
 		<echo message="Construct directory [${directory.fullPath}]" />
 		
 		<!-- Create directory -->
-		<available file="${directory.fullPath}" type="dir" property="directory.exists" />
 		<if>
 			<istrue value="${actions.makeDir}" />
 			<then>
 				<if>
-					<equals arg1="${directory.exists}" arg2="true" />
+					<available file="${directory.fullPath}" type="dir" />
 					<then>
 						<echo message="Directory [${directory.fullPath}] already exists" />
 					</then>
@@ -72,27 +96,61 @@
 					<isset property="directory.attributes.${directory.id}.gitPath" />
 					<then>
 						<if>
-							<isset property="directory.attributes.${directory.id}.gitTag" />
+							<available file="${directory.fullPath}/.git" type="dir" />
 							<then>
-								<echo message="Fetch git repository [${directory.fullPath}] tag [${directory.attributes.${directory.id}.gitTag}]" />
-								<property name="directory.gitTagUrl" value="${git.protocol}://${git.domain}${directory.attributes.${directory.id}.gitPath}/tarball/${directory.attributes.${directory.id}.gitTag}" />
-								<httpget url="${directory.gitTagUrl}" dir="${directory.fullPath}/../" followRedirects="true" sslVerifyPeer="false" />
-								<resolvepath propertyName="tar" file="${directory.fullPath}/../${directory.attributes.${directory.id}.gitTag}"/>
-								<untar file="${tar}" todir="${directory.fullPath}" />
-								<delete file="${tar}" />
-							</then>
-							<else>
-								<available file="${directory.fullPath}/.git" type="dir" property="directory.git.exists" />
+								<echo message="Pull git repository [${directory.fullPath}]" />
 								<if>
-									<equals arg1="${directory.git.exists}" arg2="true" />
+									<isset property="directory.attributes.${directory.id}.gitTag" />
 									<then>
-										<echo message="Pull git repository [${directory.fullPath}]" />
-										<gitpull gitPath="git" all="true" repository="${directory.fullPath}" strategy="recursive" />
+										<gitpull gitPath="git" repository="${directory.fullPath}" strategy="recursive" source="." refspec="${directory.attributes.${directory.id}.gitTag}" />
 									</then>
 									<else>
-										<echo message="Clone from git URL [${directory.gitUrl}]" />
-										<property name="directory.gitUrl" value="${git.protocol}://${git.domain}${directory.attributes.${directory.id}.gitPath}" />
-										<gitclone gitPath="git" repository="${directory.gitUrl}" targetPath="${directory.fullPath}" />
+										<gitpull gitPath="git" repository="${directory.fullPath}" strategy="recursive" all="true" />
+									</else>
+								</if>
+							</then>
+							<else>
+								<property name="directory.gitUrl" value="${git.protocol}://${git.domain}${directory.attributes.${directory.id}.gitPath}" />
+								<echo message="Clone from git URL [${directory.gitUrl}]" />
+								<gitclone gitPath="git" repository="${directory.gitUrl}" targetPath="${directory.fullPath}" />
+								<if>
+									<isset property="directory.attributes.${directory.id}.gitTag" />
+									<then>
+										<gitbranch gitPath="git" repository="${directory.fullPath}" branchname="${directory.attributes.${directory.id}.gitTag}" />
+										<gitcheckout gitPath="git" repository="${directory.fullPath}" branchname="${directory.attributes.${directory.id}.gitTag}" />
+									</then>
+									<else>
+										<gitcheckout gitPath="git" repository="${directory.fullPath}" branchname="." />												
+									</else>
+								</if>
+							</else>
+						</if>
+					</then>
+				</if>
+				
+				<if>
+					<isset property="directory.attributes.${directory.id}.svnPath" />
+					<then>
+						<chmod file="${svn.key}" mode="600" />
+						<if>
+							<available file="${directory.fullPath}/.svn" type="dir" />
+							<then>
+								<echo message="Update svn repository [${directory.fullPath}]" />
+								<echo message="Executing: ${svn.bin} --config-option config:tunnels:ssh=&quot;${svn.ssh.bin} -v -i ${svn.key}&quot; update &quot;${directory.fullPath}&quot;" />
+								<exec passthru="true" checkreturn="true" command="${svn.bin} --config-option config:tunnels:ssh=&quot;${svn.ssh.bin} -v -i ${svn.key}&quot; update &quot;${directory.fullPath}&quot;" />
+							</then>
+							<else>
+								<if>
+									<isset property="directory.attributes.${directory.id}.overwrite" />
+									<then>
+										<echo message="Export from svn [${svn.protocol}://${svn.username}@${svn.domain}${directory.attributes.${directory.id}.svnPath}] to [${directory.fullPath}]" />
+										<echo message="Executing: ${svn.bin} --config-option config:tunnels:ssh=&quot;${svn.ssh.bin} -v -i ${svn.key}&quot; --force export ${svn.protocol}://${svn.username}@${svn.domain}${directory.attributes.${directory.id}.svnPath} &quot;${directory.fullPath}&quot;" />
+										<exec passthru="true" checkreturn="true" command="${svn.bin} --config-option config:tunnels:ssh=&quot;${svn.ssh.bin} -v -i ${svn.key}&quot; --force export ${svn.protocol}://${svn.username}@${svn.domain}${directory.attributes.${directory.id}.svnPath} &quot;${directory.fullPath}&quot;" />
+									</then>
+									<else>
+										<echo message="Checkout from svn [${svn.protocol}://${svn.username}@${svn.domain}${directory.attributes.${directory.id}.svnPath}] to [${directory.fullPath}]" />
+										<echo message="Executing: ${svn.bin} --config-option config:tunnels:ssh=&quot;${svn.ssh.bin} -v -i ${svn.key}&quot; checkout ${svn.protocol}://${svn.username}@${svn.domain}${directory.attributes.${directory.id}.svnPath} &quot;${directory.fullPath}&quot;" />
+										<exec passthru="true" checkreturn="true" command="${svn.bin} --config-option config:tunnels:ssh=&quot;${svn.ssh.bin} -v -i ${svn.key}&quot; checkout ${svn.protocol}://${svn.username}@${svn.domain}${directory.attributes.${directory.id}.svnPath} &quot;${directory.fullPath}&quot;" />
 									</else>
 								</if>
 							</else>
@@ -102,23 +160,15 @@
 			</then>
 		</if>
 		
+		
 		<if>
-			<istrue value="${actions.setPermissions}" />
+			<or>
+				<istrue value="${actions.setOwner}" />
+				<istrue value="${actions.setPermissions}" />
+				<istrue value="${actions.createUser}" />
+			</or>
 			<then>
 				<phingcall target="Set permissions folder" />
-			</then>
-		</if>
-	</target>
-	
-	<target name="Set permissions file">
-
-		<!-- TODO - make sure it's not a folder -->		
-		<echo message="Set folder [${directory.fullPath}] file [${filename}] permissions [${currentMode}]" />
-		<if>
-			<!-- change mode -->
-			<isset property="currentMode" />
-			<then>
-				<chmod file="${directory.fullPath}/${filename}" mode="${currentMode}" failonerror="${permissions.required}" />
 			</then>
 		</if>
 		
@@ -158,20 +208,38 @@
 		<if>
 			<!-- change user and group -->
 			<and>
+				<not><os family="windows" /></not>
 				<isset property="user" />
 				<isset property="group" />
 			</and>
 			<then>
-				<echo message="Change directory [${directory.fullPath}] group [${group}] and user [${user}]" />
-				<chown file="${directory.fullPath}" user="${user}.${group}" failonerror="${permissions.required}" />
+				
 				<if>
-					<not><isset property="directory.attributes.${directory.id}.skipFilesOwner" /></not>
+					<istrue value="${actions.setOwner}" />
 					<then>
-						<chown user="${user}.${group}" failonerror="${permissions.required}" >
-							<fileset dir="${directory.fullPath}" defaultexcludes="false" />
-						</chown>
+						<echo message="Change directory [${directory.fullPath}] group [${group}] and user [${user}]" />
+						<chown file="${directory.fullPath}" user="${user}.${group}" failonerror="${permissions.required}" />
+						<if>
+							<not><isset property="directory.attributes.${directory.id}.skipFilesOwner" /></not>
+							<then>
+								<chown user="${user}.${group}" failonerror="${permissions.required}" >
+									<fileset dir="${directory.fullPath}" defaultexcludes="false" />
+								</chown>
+							</then>
+						</if>
 					</then>
 				</if>
+				
+				<if>
+					<and>
+						<istrue value="${actions.createUser}" />
+						<os family="unix" />
+					</and>
+					<then>
+						<createuser username="${user}" groups="${group}" ifNotExists="true" />
+					</then>
+				</if>
+				
 			</then>
 		</if>
 		
@@ -220,30 +288,35 @@
 			</then>
 		</if>
 		
-		<echo message="Set directory [${directory.fullPath}] permissions [${mode}]" />
-		<chmod file="${directory.fullPath}" mode="${mode}" failonerror="${permissions.required}" />
 		<if>
-			<not><isset property="directory.attributes.${directory.id}.skipFilesMode" /></not>
+			<istrue value="${actions.setPermissions}" />
 			<then>
-				
-				<chmod mode="${mode}" failonerror="${permissions.required}">
-					<fileset dir="${directory.fullPath}" defaultexcludes="false">
-						<type type="dir" />
-					</fileset>
-				</chmod>
-				
-				<chmod mode="${filesMode}" failonerror="${permissions.required}">
-					<fileset dir="${directory.fullPath}" defaultexcludes="false" excludes="${permissions.mode.scripts.pattern}">
-						<type type="file" />
-					</fileset>
-				</chmod>
-				
-				<chmod mode="${scriptsMode}" failonerror="${permissions.required}">
-					<fileset dir="${directory.fullPath}" defaultexcludes="false" includes="${permissions.mode.scripts.pattern}">
-						<type type="file" />
-					</fileset>
-				</chmod>
-				
+				<echo message="Set directory [${directory.fullPath}] permissions [${mode}]" />
+				<chmod file="${directory.fullPath}" mode="${mode}" failonerror="${permissions.required}" />
+				<if>
+					<not><isset property="directory.attributes.${directory.id}.skipFilesMode" /></not>
+					<then>
+						
+						<chmod mode="${mode}" failonerror="${permissions.required}">
+							<fileset dir="${directory.fullPath}" defaultexcludes="false">
+								<type type="dir" />
+							</fileset>
+						</chmod>
+						
+						<chmod mode="${filesMode}" failonerror="${permissions.required}">
+							<fileset dir="${directory.fullPath}" defaultexcludes="false" excludes="${permissions.mode.scripts.pattern}">
+								<type type="file" />
+							</fileset>
+						</chmod>
+						
+						<chmod mode="${scriptsMode}" failonerror="${permissions.required}">
+							<fileset dir="${directory.fullPath}" defaultexcludes="false" includes="${permissions.mode.scripts.pattern}">
+								<type type="file" />
+							</fileset>
+						</chmod>
+						
+					</then>
+				</if>
 			</then>
 		</if>
 		
