--- a/installer/installer/installation.ini
+++ b/installer/installer/installation.ini
@@ -4,7 +4,10 @@
 ; all the tokens are replaced with configuration parameters. 
 ; Please note, every file with '.template' in the filename is 
 ; automatically copied to a file not containing '.template' in the filename
-token_files[] = @BASE_DIR@/crontab/kaltura_crontab
+token_files[] = @BASE_DIR@/app/configurations/cron/api
+token_files[] = @BASE_DIR@/app/configurations/cron/batch
+token_files[] = @BASE_DIR@/app/configurations/cron/admin
+token_files[] = @BASE_DIR@/app/configurations/cron/sphinx
 token_files[] = @BASE_DIR@/app/configurations/admin.template.ini
 token_files[] = @BASE_DIR@/app/configurations/sphinx/kaltura.conf.template
 token_files[] = @BASE_DIR@/app/configurations/logger.template.ini
@@ -23,31 +26,9 @@ token_files[] = @BASE_DIR@/app/configurations/logrotate/kaltura_batch.template
 token_files[] = @BASE_DIR@/app/configurations/logrotate/kaltura_cron.template
 token_files[] = @BASE_DIR@/app/plugins/sphinx_search/scripts/configs/server-sphinx.php.template
 token_files[] = @BASE_DIR@/app/deployment/base/sql/02.kaltura_ce_data.sql
-token_files[] = @BASE_DIR@/app/deployment/base/sql/03.dwh_grants.sql
-token_files[] = @BASE_DIR@/app/deployment/final/sql/02.kaltura_ce_data.sql
-token_files[] = @BASE_DIR@/app/deployment/final/sql/03.dwh_grants.sql
 token_files[] = @BASE_DIR@/dwh/.kettle/kettle.template.properties
+token_files[] = dbSchema/db.xml
 token_files[] = configurator/configuration.ini
-
-; the commands that are listed executes the needed chmod commands
-chmod_items[] = " 0755 -R @BASE_DIR@"
-chmod_items[] = " 0777 -R @BASE_DIR@/web"
-chmod_items[] = " 0775 -R @BASE_DIR@/bin"
-chmod_items[] = " 0777 -R @BASE_DIR@/tmp"
-chmod_items[] = " 0777 -R @BASE_DIR@/log"
-chmod_items[] = " 0777 -R @BASE_DIR@/cache"
-chmod_items[] = " 0775 -R @BASE_DIR@/app"
-chmod_items[] = " 0775 -R @BASE_DIR@/app/scripts"
-chmod_items[] = " 0777 -R @BASE_DIR@/app/cache"
-chmod_items[] = " 0777 @BASE_DIR@/app/configurations/admin.ini"
-chmod_items[] = " 0777 @BASE_DIR@/app/configurations/local.ini"
-chmod_items[] = " 0777 @BASE_DIR@/app/infra/kConf.php"
-chmod_items[] = " 0755 -R @BASE_DIR@/dwh"
-chmod_items[] = " 0644 -R @BASE_DIR@/crontab/kaltura_crontab"
-chmod_items[] = " 0644 -R @BASE_DIR@/dwh/crontab/dwh_crontab"
-chmod_items[] = " 0777 -R @BASE_DIR@/app/plugins/sphinx_search/scripts"
-chmod_items[] = " 0777 -R @BASE_DIR@/app/vendor"
-chmod_items[] = " 0777 -R @BASE_DIR@/app/infra"
 
 ; The installer will create a link from the first part to the second part ('^' separates the two parts)
 symlinks[] = "@BASE_DIR@/app/api_v3/web^@BASE_DIR@/app/alpha/web/api_v3"
@@ -55,9 +36,17 @@ symlinks[] = "@BASE_DIR@/bin/run/run-ffmpeg-0.10.sh^@BASE_DIR@/bin/ffmpeg"
 symlinks[] = "@BASE_DIR@/bin/run/run-mencoder.sh^@BASE_DIR@/bin/mencoder"
 symlinks[] = "@BASE_DIR@/bin/run/run-ffmpeg-0.6.sh^@BASE_DIR@/bin/ffmpeg-aux"
 symlinks[] = "@BASE_DIR@/bin/run/run-segmenter.sh^@BASE_DIR@/bin/segmenter"
-symlinks[] = "@BASE_DIR@/crontab/kaltura_crontab^/etc/cron.d/kaltura_crontab"
+symlinks[] = "@BASE_DIR@/app/configurations/cron/api^/etc/cron.d/api"
+symlinks[] = "@BASE_DIR@/app/configurations/cron/batch^/etc/cron.d/batch"
+symlinks[] = "@BASE_DIR@/app/configurations/cron/dwh^/etc/cron.d/admin"
+symlinks[] = "@BASE_DIR@/app/configurations/cron/sphinx^/etc/cron.d/sphinx"
 symlinks[] = "@BASE_DIR@/app/scripts/serviceBatchMgr.sh^/etc/init.d/serviceBatchMgr.sh"
 symlinks[] = "@BASE_DIR@/app/scripts/sphinx_watch.sh^/etc/init.d/sphinx_watch.sh"
+symlinks[] = "@BASE_DIR@/app/configurations/apache/my_kaltura.conf^/etc/httpd/conf.d/my_kaltura.conf"
+symlinks[] = "@BASE_DIR@/app/configurations/logrotate/kaltura_api^/etc/logrotate.d/kaltura_api"
+symlinks[] = "@BASE_DIR@/app/configurations/logrotate/kaltura_apps^/etc/logrotate.d/kaltura_apps"
+symlinks[] = "@BASE_DIR@/app/configurations/logrotate/kaltura_batch^/etc/logrotate.d/kaltura_batch"
+symlinks[] = "@BASE_DIR@/app/configurations/logrotate/kaltura_cron^/etc/logrotate.d/kaltura_cron"
 symlinks[] = "@BASE_DIR@/apps/clipapp/@CLIPAPP_VERSION@_saas/config.local.php^@BASE_DIR@/apps/clipapp/@CLIPAPP_VERSION@/config.local.php"
 
 ; These are the databases that the installer checks if exists before installation (and remove on cleanup)
