update from svn r92859

--- a/installer/installer/installation.ini
+++ b/installer/installer/installation.ini
@@ -6,6 +6,7 @@
 ; automatically copied to a file not containing '.template' in the filename
 token_files[] = @BASE_DIR@/logrotate/kaltura_log_rotate
 token_files[] = @BASE_DIR@/crontab/kaltura_crontab
+token_files[] = @BASE_DIR@/dwh/crontab/dwh_crontab
 token_files[] = @BASE_DIR@/app/configurations/admin.template.ini
 token_files[] = @BASE_DIR@/app/configurations/sphinx/kaltura.conf.template
 token_files[] = @BASE_DIR@/app/configurations/logger.template.ini
@@ -56,6 +57,8 @@ symlinks[] = "@BASE_DIR@/bin/run/run-segmenter.sh^@BASE_DIR@/bin/segmenter"
 symlinks[] = "@BASE_DIR@/crontab/kaltura_crontab^/etc/cron.d/kaltura_crontab"
 symlinks[] = "@BASE_DIR@/app/scripts/serviceBatchMgr.sh^/etc/init.d/serviceBatchMgr.sh"
 symlinks[] = "@BASE_DIR@/app/scripts/sphinx_watch.sh^/etc/init.d/sphinx_watch.sh"
+symlinks[] = "@BASE_DIR@/app/configurations/apache/my_kaltura.conf^/etc/httpd/conf.d/my_kaltura.conf"
+symlinks[] = "@BASE_DIR@/logrotate/kaltura_log_rotate^/etc/logrotate.d/kaltura_log_rotate"
 symlinks[] = "@BASE_DIR@/apps/clipapp/@CLIPAPP_VERSION@_saas/config.local.php^@BASE_DIR@/apps/clipapp/@CLIPAPP_VERSION@/config.local.php"
 
 ; These are the databases that the installer checks if exists before installation (and remove on cleanup)
