--- a/packaging/manifest.ini
+++ b/packaging/manifest.ini
@@ -32,6 +32,8 @@ get[] = kmc/login/v1.2.2
 get[] = ksr/v1.0.32
 get[] = kcw/v2.1.6.7
 get[] = kcw/v2.2
+get[] = kdp3/v3.6.14
+get[] = kdp3/v3.6.11
 
 ;MediaSpace4
 get[] = kdp3/v3.6.5
@@ -152,6 +154,8 @@ local_path = package/app/html5/html5lib/
 get[] = v1.6.12.27g
 get[] = v1.6.12.27i
 get[] = v1.7.0
+get[] = v1.7.0.8
+get[] = v1.7.0.4
 
 [installer]
 svn_path = kalsource/on-premise/tags/CE-6.0.1/installer/
